--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "http-proxy-middleware": "^2.0.0",
     "kakaojs": "^1.2.0",
     "react": "^17.0.2",
     "react-bootstrap-table": "^4.3.1",
