--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
