--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "form-data": "^3.0.1",
     "http-proxy-middleware": "^2.0.0",
     "kakaojs": "^1.2.0",
@@ -17,6 +18,7 @@
     "react-intersection-observer": "^8.32.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
