--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/pickers": "^3.3.10",
+    "@stomp/stompjs": "^6.1.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "date-fns": "^2.23.0",
     "form-data": "^3.0.1",
     "kakaojs": "^1.2.0",
     "react": "^17.0.2",
     "react-bootstrap-table": "^4.3.1",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "react-timepicker": "^2.0.2",
+    "sockjs-client": "^1.5.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
