--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.23.0",
     "form-data": "^3.0.1",
     "kakaojs": "^1.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap-table": "^4.3.1",
     "react-datepicker": "^4.2.1",
