--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "date-fns": "^2.23.0",
+    "firebase": "^8.10.0",
     "form-data": "^3.0.1",
     "kakaojs": "^1.2.0",
     "moment": "^2.29.1",
