--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.1",
+    "react-reducer": "^1.0.0-beta.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-timepicker": "^2.0.2",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.4.0",
     "sockjs-client": "^1.5.2",
     "web-vitals": "^1.1.2"
   },
