feat: 서버 이전으로 인한 주소 변경, readme 수정   css: 채팅방 시간폼 변경

--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+
+
 {
   "name": "study_forest",
   "version": "0.1.0",
@@ -36,7 +38,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "--max-old-space-size=8192 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
